# ORIGAMI

./: .gitignore  DATASETS_SUMMARY.txt  PRETRAINED_MODEL_INFO.txt  QUICKSTART.md  README.md  data_preprocess.py  origami_environment.yml  pyproject.toml
models/origami/: datasets.py  models.py  predict.py  train.py  utils.py
models/origami/configs/: dis24.yml
modules/: dropout.py  gconv.py  linear.py  perceptron.py
pretrained_models/: README.md
tests/: test_smoke.py
utils/: train.py
